Added a Map to cache the response for 20 minutes

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-nent<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
 
     ==========================================================================================
@@ -7,7 +7,7 @@ nent<?xml version="1.0" encoding="UTF-8"?>
 
                                     http://www.jahia.com
 
-        Copyright (C) 2002-2020 Jahia Solutions Group SA. All rights reserved.
+        Copyright (C) 2002-2019 Jahia Solutions Group SA. All rights reserved.
 
         THIS FILE IS AVAILABLE UNDER TWO DIFFERENT LICENSES:
         1/GPL OR 2/JSEL
@@ -44,10 +44,8 @@ nent<?xml version="1.0" encoding="UTF-8"?>
         please contact the sales department at sales@jahia.com.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>jahia-modules</artifactId>
