--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,9 @@
         <connection>scm:dummy:uri</connection>
         <developerConnection>scm:dummy:uri</developerConnection>
     </scm>
-
+    <properties>
+        <require-capability>osgi.extender;filter:="(osgi.extender=org.jahia.bundles.blueprint.extender.config)"</require-capability>
+    </properties>
     <repositories>
         <repository>
             <id>jahia-public</id>
