--- a/pom.xml
+++ b/pom.xml
@@ -53,14 +53,14 @@
   </parent>
   <groupId>org.se.modules</groupId>
   <artifactId>currentsapi</artifactId>
-  <version>2.0.0</version>
+  <version>2.1.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>currentsAPI</name>
   <description>This is the custom module (currentsAPI) for running on a Jahia server.</description>
   <scm>
     <connection>scm:git:https://github.com/smonier/currentsapi.git</connection>
     <developerConnection>scm:git:https://github.com/smonier/currentsapi.git</developerConnection>
-    <tag>2_0_0</tag>
+    <tag>HEAD</tag>
   </scm>
   <properties>
     <require-capability>osgi.extender;filter:="(osgi.extender=org.jahia.bundles.blueprint.extender.config)"</require-capability>
